--- a/css/voyah-range.css
+++ b/css/voyah-range.css
@@ -1,8 +1,13 @@
+#vrf {
+  max-width: 100vw;
+}
+
 #vrf-inner {
   max-width: 1290px;
   margin-left: auto;
   margin-right: auto;
   padding: 25px;
+  border: 0.3px dotted gray;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px 20px;
@@ -283,6 +288,7 @@ html {
 }
 
 body {
+  margin: 0;
   padding-top: 100px;
 }
 
