--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -6,7 +6,7 @@
     // padding-left: 0;
     // padding-right: 0;
     // clear: both;
-	
+	max-width: 100vw;
 }
 
 #vrf-inner{
@@ -14,7 +14,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	padding: 25px;
-	// border: .3px dotted gray;
+	border: .3px dotted gray;
 
 	display: grid;
 	grid-template-columns: 1fr 1fr;
